CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
MESSAGE(STATUS "--- Configuring target ${LIB_HOUMTH} ---")



# Output dir
SET(LIB_HOUMTH_OUTPUT_DIR ${CMAKE_BINARY_DIR})
MESSAGE(STATUS "Output dir: ${LIB_HOUMTH_OUTPUT_DIR}")



# Definitions.
ADD_DEFINITIONS(-DHOU_MTH_EXPORTS)
GET_PROPERTY(LIB_HOUMTH_DEFINITIONS
  DIRECTORY ${CURRENT_SOURCE_DIR}
  PROPERTY COMPILE_DEFINITIONS
)
MESSAGE(STATUS "Definitions: ${LIB_HOUMTH_DEFINITIONS}")



# Include directories.
INCLUDE_DIRECTORIES(
  ${LIB_HOUCOR_INCLUDE_DIR}
  ${LIB_HOUMTH_INCLUDE_DIR}
)



# Source files.
SET(LIB_HOUMTH_SRC
  src/hou/mth/math_functions.cpp
  src/hou/mth/transform3.cpp
)



# Linked libraries.
IF(HOU_CFG_BUILD_STATIC_LIBS)
  SET(LIB_HOUMTH_LIB)
ELSE()
  SET(LIB_HOUMTH_LIB
    ${LIB_HOUCOR}
  )
ENDIF()
MESSAGE(STATUS "Linked libs: ${LIB_HOUMTH_LIB}")



# Add targets.
IF(HOU_CFG_BUILD_STATIC_LIBS)
  ADD_LIBRARY(${LIB_HOUMTH} STATIC ${LIB_HOUMTH_SRC})
ELSE()
  ADD_LIBRARY(${LIB_HOUMTH} SHARED ${LIB_HOUMTH_SRC})
ENDIF()
SET_TARGET_PROPERTIES(${LIB_HOUMTH} PROPERTIES
  COMPILE_FLAGS ${LIB_HOU_FLAGS}
  LINKER_LANGUAGE CXX
  ARCHIVE_OUTPUT_DIRECTORY ${LIB_HOUMTH_OUTPUT_DIR}
  LIBRARY_OUTPUT_DIRECTORY ${LIB_HOUMTH_OUTPUT_DIR}
  RUNTIME_OUTPUT_DIRECTORY ${LIB_HOUMTH_OUTPUT_DIR}
)
TARGET_LINK_LIBRARIES(${LIB_HOUMTH} ${LIB_HOUMTH_LIB})



MESSAGE(STATUS "")



IF(HOU_CFG_BUILD_TESTS)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/test)
ENDIF()

